# oqd-core

./: .gitignore  CONTRIBUTING.md  README.md  app.py  basic_tests.py  combined_test_log.txt  combined_test_log_v2.txt  demo.py  deploy.py  example.py  main.py  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  submit.py  testv2.py  xx_analyzer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: CI.yml  build-docs.yml  build_docs.yml  check_code_format.yml  check_copyright.yml  check_copyright_config.json  check_mkdocs_build.yml  copyright.txt  pytest.yml
1quantum_calculator/: exploring.ipynb  lexer.py
1quantum_calculator/tests/: test_lexer.ipynb
backends/: base.py  metric.py  provider.py  task.py
backends/analog/: QOJulia.jl  data.py  qojulia.py  qutip.py
backends/atomic/: data.py
backends/digital/: data.py  tc.py  tensorcircuit.py
backends/qsim/: qutip.py
benchmark/: analog.ipynb  xy_model.py
compiler_notes/: compiler-concepts.mermaid  xx_analysis_detailed_flow.mermaid
docker/: Dockerfile  docker-compose.yaml  supervisord.conf
docs/: compilation.md  demos.md  examples.md  explanation.md  how-to-guides.md  index.md  reference.md  roadmap.md  tutorials.md  units.md
docs/demos/: Rabi-flopping.md  TFIM.md
docs/explanation/: Analog-to-Atomic-compiler.md  analog_interface.md  analog_to_atomic.md  atomic_interface.md  canonicalization.md  compilation-flow.md  infrastructure.md  math_interface.md  qutip-simulation.md
docs/get-started/: acknowledgement.md  how-to-guides.md  installation.md  stack.md  tutorials.md
docs/reference/: analog-interface.md  analog_canonicalization.md  analog_interface.md  atomic-interface.md  atomic_canonicalization.md  atomic_interface.md  backend.md  compiler.md  digital-interface.md  interface-base.md  interface_base.md  math-interface.md  math_compiler.md  math_interface.md  operation-interface.md  operations-interface.md  operator-interface.md  qutip-backend.md  qutip_backend.md  reference.md  task-backend.md  utils.md
docs/src/: conf.py  index.rst  install.rst
docs/stylesheets/: admonitions.css
docs/tutorials/: analog.md  ising.md  rabi-flopping.md  tutorials.md
examples/: adiabatic_linear.ipynb  adiabatic_sigmoid.ipynb  analog.py  backend.ipynb  bell_state.ipynb  canonicalization.ipynb  digital.py  example.ipynb  experiments.py  ghz_state.ipynb  ising_model.ipynb  one_qubit_rabi_flopping.ipynb  qaoa.ipynb  stack-test.md
examples/emulation/: bell_state_preparation.py  bell_state_preparation_standard.py  ghz_state_three_qubit_preparation.py  one_qubit_rabi_flopping.py  tfim_arbitrary_site.py  utils.py
examples/experiments/: bell_state_preparation.py  one_qubit_rabi_flopping.py  pi_pulse.py  tfim_arbitrary_site.py  three_qubit_ghz_state_preparation.py  utils.py
midstack/backend/: task.py
midstack/compiler/: rewriter.py  rule.py  utils.py
quantumion/: base.py  client.py  types.py
quantumion/analog/: __init__.py  circuit.py  coefficient.py  dissipation.py  experiment.py  gate.py  math.py  operator.py
quantumion/atomic/: schedule.py
quantumion/backend/: __init__.py  base.py  client.py  job.py  metric.py  provider.py  task.py
quantumion/circuit/: circuit.py  ops.py  qasm.py
quantumion/compiler/: analog.py  atomic.py  (+9 more)
src/: client.py
test_logs/: II_Gate_PASS.txt  Ladder_Operators_PASS.txt  Mixed_XX_XXX_Gates_PASS.txt  Mixed_XX_YY_Gates_PASS.txt  Multiple_XX_Gates_PASS.txt  Time_Dependent_2tXX_PASS.txt  Time_Dependent_XX_PASS.txt  Weighted_XX_Gate_PASS.txt  XXX_Gate_PASS.txt  XXY_Gate_PASS.txt  XX_Gate_PASS.txt  XYZ_Gate_PASS.txt  XY_Gate_PASS.txt  XZ_Gate_PASS.txt  YY_Gate_PASS.txt  ZZ_Gate_PASS.txt
tests/: pytest.ini  test.py  test.sh  test_operator_refractored.py  test_serialization.py  test_server.py  test_server2.py
Сalc/: exploring.ipynb
(+354 files in other folders)
