[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-core"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = [
  "quantum",
  "computing",
  "analog",
  "digital",
  "compiler",
  "transpilation",
  "atomic",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Compilers",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.4",
  "Cython~=3.0.10",
  "filelock~=3.13.4",
  "numpy~=1.0",
  "oqd-compiler-infrastructure",
]

[project.optional-dependencies]
docs = [
  "pymdown-extensions",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python",
  "mdx_truly_sane_lists",
]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_core*"]


[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/oqd-core"
Repository = "https://github.com/OpenQuantumDesign/oqd-core.git"
Issues = "https://github.com/OpenQuantumDesign/oqd-core/issues"
