[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-core"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = [
  "quantum",
  "computing",
  "analog",
  "digital",
  "compiler",
  "transpilation",
  "atomic",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Compilers",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.10.6",
    "qutip>=5.1.1",
    "oqd-compiler-infrastructure@git+https://github.com/openquantumdesign/oqd-compiler-infrastructure",
]

[project.optional-dependencies]
docs = [
  "pymdown-extensions",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python",
  "mdx_truly_sane_lists",
]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_core*"]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]

[dependency-groups]
dev = []


[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/oqd-core"
Repository = "https://github.com/OpenQuantumDesign/oqd-core.git"
Issues = "https://github.com/OpenQuantumDesign/oqd-core/issues"
